--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-  <h1>Kierrez Zer My Nobia</h1>
+  <h1>❤Kierrez Zer My Nobia❤</h1>
+  <div>
+    <img
+      src="https://1.bp.blogspot.com/-qsvCBLdgYj8/XCLjZK9_RMI/AAAAAAAABBA/BsQ7kYtn9qkPkQ3VhF8g_1Er73bGs7KGQCLcBGAs/w1200-h630-p-k-no-nu/srewk.jpg"
+      alt="Foto d my">
+  </div>
+  <button id="yes">🌚Si soy🌚</button>
+  <button id="no">😭Nel Perro😭</button>
 </body>
 
 </html>
