--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
   </div>
   <button id="yes">🌚Si soy🌚</button>
   <button id="no">😭Nel Perro😭</button>
+
+  <script>
+    const zomosNobios = () => {
+      alert('💞Now zomos NoBioS💞');
+      alert('😱Nuestra VoDa Is MañaNa😱');
+      location.href = "https://youtu.be/am1_JLFDFMw?t=19";
+    };
+    const ebitarKCRompaMyBobo = () => {
+      votonNo.style.position = 'absolute';
+      votonNo.style.top = (Math.random() * window.innerHeight) + 'px';
+      votonNo.style.left = (Math.random() * window.innerWidth) + 'px';
+    };
+
+    window.document.getElementById('yes').onclick = zomosNobios;
+    votonNo = window.document.getElementById('no');
+    votonNo.onmouseover = ebitarKCRompaMyBobo;
+  </script>
 </body>
 
 </html>
