--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kierrez Zer My Nobia</title>
+  <style>
+    body {
+      background: crimson;
+      text-align: center;
+    }
+
+    h1 {
+      color: white;
+    }
+
+    img {
+      border-radius: 50%;
+    }
+  </style>
 </head>
 
 <body>
