--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   <style>
     body {
       background: crimson;
-      text-align: center;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      height: 100vh;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
 
     h1 {
@@ -18,6 +24,30 @@
 
     img {
       border-radius: 50%;
+      box-shadow: 0 5px 5px 0 black;
+    }
+
+    button {
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      background: white;
+      border: 2px solid black;
+      border-radius: 16px;
+      padding: 16px;
+      margin: 16px;
+      font-weight: bold;
+      letter-spacing: 2px;
+      cursor: pointer;
+      transition: all 0.5s;
+    }
+
+    button:hover {
+      box-shadow: 0 5px 5px 0 black;
+      filter: brightness(150%);
+      transform: scale(1.1);
+    }
+
+    button:active {
+      transform: scale(0.9);
     }
   </style>
 </head>
