--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kierrez Zer My Nobia</title>
+  <title>Me dejas salir mi amor?</title>
   <link rel="stylesheet" href="./css/index.css" />
   <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_corazón.svg/1200px-Heart_corazón.svg.png" type="image/x-icon">
 </head>
 
 <body class="contenedor">
-  <h1 class="contenedor__titulo">❤ Kierrez Zer My ParTnEr oF Mi LyFe </h1>
+  <h1 class="contenedor__titulo">❤ Me dejas salir mi amor? </h1>
   <div>
     <img
       src="https://1.bp.blogspot.com/-qsvCBLdgYj8/XCLjZK9_RMI/AAAAAAAABBA/BsQ7kYtn9qkPkQ3VhF8g_1Er73bGs7KGQCLcBGAs/w1200-h630-p-k-no-nu/srewk.jpg"
       alt="Foto d my" class="contenedor__imagen" />
   </div>
-  <button id="yes" class="contenedor__boton">🌚Si soy🌚</button>
-  <button id="no" class="contenedor__boton">😭Nel Perro😭</button>
+  <button id="yes" class="contenedor__boton">🌚Si🌚</button>
+  <button id="no" class="contenedor__boton">😭No😭</button>
 
   <script src="./js/index.js" type="module"></script>
 </body>
